# distributed-test

./: README.md  distributed-test.cabal  nodes.txt  test-run.sh
app/: Main.hs
