name:           distributed-test
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/distributed-test#readme>
homepage:       https://github.com/githubuser/distributed-test#readme
bug-reports:    https://github.com/githubuser/distributed-test/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/distributed-test

executable testnode
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-unused-imports -fno-warn-type-defaults -fno-warn-unused-matches
  build-depends:
      base >=4.7 && <5
    , distributed-process, network-transport-tcp
    , optparse-applicative, basic-prelude, errors
    , mwc-random, vector, time, containers
    , network
  default-language: Haskell2010

-- test-suite distributed-test-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs:
--       test
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       base >=4.7 && <5
--     , distributed-test
--   other-modules:
--       Paths_distributed_test
--   default-language: Haskell2010
